--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -40,4 +39,9 @@ ol{
 
 ol li{
     padding: 0.55rem;
+}
+
+.highscore{
+    margin-top: 5rem;
+    color: #1f1f1f;
 }
